// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/result/demo/403.md correctly 1`] = `
<div class="ant-result ant-result-403">
  <div class="ant-result-icon ant-result-image"><img alt="403" src=""></div>
  <div class="ant-result-title">403</div>
  <div class="ant-result-subtitle">Sorry, you are not authorized to access this page.</div>
  <div class="ant-result-extra"><button type="button" class="ant-btn ant-btn-primary"><span>Back Home</span></button></div>
</div>
`;

exports[`renders ./components/result/demo/404.md correctly 1`] = `
<div class="ant-result ant-result-404">
  <div class="ant-result-icon ant-result-image"><img alt="404" src=""></div>
  <div class="ant-result-title">404</div>
  <div class="ant-result-subtitle">Sorry, the page you visited does not exist.</div>
  <div class="ant-result-extra"><button type="button" class="ant-btn ant-btn-primary"><span>Back Home</span></button></div>
</div>
`;

exports[`renders ./components/result/demo/500.md correctly 1`] = `
<div class="ant-result ant-result-500">
  <div class="ant-result-icon ant-result-image"><img alt="500" src=""></div>
  <div class="ant-result-title">500</div>
  <div class="ant-result-subtitle">Sorry, the server is wrong.</div>
  <div class="ant-result-extra"><button type="button" class="ant-btn ant-btn-primary"><span>Back Home</span></button></div>
</div>
`;

exports[`renders ./components/result/demo/customIcon.md correctly 1`] = `
<div class="ant-result ant-result-info">
  <div class="ant-result-icon"><i aria-label="icon: smile" class="anticon anticon-smile"><svg viewBox="64 64 896 896" data-icon="smile" width="1em" height="1em" fill="currentColor" aria-hidden="true" class="">
        <path fill="#1890ff" d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"></path>
        <path fill="#e6f7ff" d="M512 140c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zM288 421a48.01 48.01 0 0 1 96 0 48.01 48.01 0 0 1-96 0zm224 272c-85.5 0-155.6-67.3-160-151.6a8 8 0 0 1 8-8.4h48.1c4.2 0 7.8 3.2 8.1 7.4C420 589.9 461.5 629 512 629s92.1-39.1 95.8-88.6c.3-4.2 3.9-7.4 8.1-7.4H664a8 8 0 0 1 8 8.4C667.6 625.7 597.5 693 512 693zm176-224a48.01 48.01 0 0 1 0-96 48.01 48.01 0 0 1 0 96z"></path>
        <path fill="#1890ff" d="M288 421a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm376 112h-48.1c-4.2 0-7.8 3.2-8.1 7.4-3.7 49.5-45.3 88.6-95.8 88.6s-92-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 0 0-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 0 0-8-8.4zm-24-112a48 48 0 1 0 96 0 48 48 0 1 0-96 0z"></path>
      </svg></i></div>
  <div class="ant-result-title">Great, we have done all the operations!</div>
  <div class="ant-result-subtitle"></div>
  <div class="ant-result-extra"><button type="button" class="ant-btn ant-btn-primary"><span>Next</span></button></div>
</div>
`;

exports[`renders ./components/result/demo/error.md correctly 1`] = `
<div class="ant-result ant-result-error">
  <div class="ant-result-icon"><i aria-label="icon: close-circle" class="anticon anticon-close-circle"><svg viewBox="64 64 896 896" data-icon="close-circle" width="1em" height="1em" fill="currentColor" aria-hidden="true" class="">
        <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 0 1-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"></path>
      </svg></i></div>
  <div class="ant-result-title">Submission Failed</div>
  <div class="ant-result-subtitle">Please check and modify the following information before resubmitting.</div>
  <div class="ant-result-content">
    <div class="desc">
      <p style="font-size: 16px;"><strong>The content you submitted has the following error:</strong></p>
      <p><i aria-label="icon: close-circle" class="anticon anticon-close-circle" style="color: red;"><svg viewBox="64 64 896 896" data-icon="close-circle" width="1em" height="1em" fill="currentColor" aria-hidden="true" class="">
            <path d="M685.4 354.8c0-4.4-3.6-8-8-8l-66 .3L512 465.6l-99.3-118.4-66.1-.3c-4.4 0-8 3.5-8 8 0 1.9.7 3.7 1.9 5.2l130.1 155L340.5 670a8.32 8.32 0 0 0-1.9 5.2c0 4.4 3.6 8 8 8l66.1-.3L512 564.4l99.3 118.4 66 .3c4.4 0 8-3.5 8-8 0-1.9-.7-3.7-1.9-5.2L553.5 515l130.1-155c1.2-1.4 1.8-3.3 1.8-5.2z"></path>
            <path d="M512 65C264.6 65 64 265.6 64 513s200.6 448 448 448 448-200.6 448-448S759.4 65 512 65zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"></path>
          </svg></i> Your account has been frozen <a>Thaw immediately &gt;</a></p>
      <p><i aria-label="icon: close-circle" class="anticon anticon-close-circle" style="color: red;"><svg viewBox="64 64 896 896" data-icon="close-circle" width="1em" height="1em" fill="currentColor" aria-hidden="true" class="">
            <path d="M685.4 354.8c0-4.4-3.6-8-8-8l-66 .3L512 465.6l-99.3-118.4-66.1-.3c-4.4 0-8 3.5-8 8 0 1.9.7 3.7 1.9 5.2l130.1 155L340.5 670a8.32 8.32 0 0 0-1.9 5.2c0 4.4 3.6 8 8 8l66.1-.3L512 564.4l99.3 118.4 66 .3c4.4 0 8-3.5 8-8 0-1.9-.7-3.7-1.9-5.2L553.5 515l130.1-155c1.2-1.4 1.8-3.3 1.8-5.2z"></path>
            <path d="M512 65C264.6 65 64 265.6 64 513s200.6 448 448 448 448-200.6 448-448S759.4 65 512 65zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"></path>
          </svg></i> Your account is not yet eligible to apply <a>Apply Unlock &gt;</a></p>
    </div>
  </div>
  <div class="ant-result-extra"><button type="button" class="ant-btn ant-btn-primary"><span>Go Console</span></button> <button type="button" class="ant-btn"><span>Buy Again</span></button></div>
</div>
`;

exports[`renders ./components/result/demo/info.md correctly 1`] = `
<div class="ant-result ant-result-info">
  <div class="ant-result-icon"><i aria-label="icon: exclamation-circle" class="anticon anticon-exclamation-circle"><svg viewBox="64 64 896 896" data-icon="exclamation-circle" width="1em" height="1em" fill="currentColor" aria-hidden="true" class="">
        <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 0 1 0-96 48.01 48.01 0 0 1 0 96z"></path>
      </svg></i></div>
  <div class="ant-result-title">Your operation has been executed</div>
  <div class="ant-result-subtitle"></div>
  <div class="ant-result-extra"><button type="button" class="ant-btn ant-btn-primary"><span>Go Console</span></button></div>
</div>
`;

exports[`renders ./components/result/demo/success.md correctly 1`] = `
<div class="ant-result ant-result-success">
  <div class="ant-result-icon"><i aria-label="icon: check-circle" class="anticon anticon-check-circle"><svg viewBox="64 64 896 896" data-icon="check-circle" width="1em" height="1em" fill="currentColor" aria-hidden="true" class="">
        <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 0 1-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"></path>
      </svg></i></div>
  <div class="ant-result-title">Successfully Purchased Cloud Server ECS!</div>
  <div class="ant-result-subtitle">Order number: 2017182818828182881 Cloud server configuration takes 1-5 minutes, please wait.</div>
  <div class="ant-result-extra"><button type="button" class="ant-btn ant-btn-primary"><span>Go Console</span></button> <button type="button" class="ant-btn"><span>Buy Again</span></button></div>
</div>
`;

exports[`renders ./components/result/demo/warning.md correctly 1`] = `
<div class="ant-result ant-result-warning">
  <div class="ant-result-icon"><i aria-label="icon: warning" class="anticon anticon-warning"><svg viewBox="64 64 896 896" data-icon="warning" width="1em" height="1em" fill="currentColor" aria-hidden="true" class="">
        <path d="M955.7 856l-416-720c-6.2-10.7-16.9-16-27.7-16s-21.6 5.3-27.7 16l-416 720C56 877.4 71.4 904 96 904h832c24.6 0 40-26.6 27.7-48zM480 416c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v184c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V416zm32 352a48.01 48.01 0 0 1 0-96 48.01 48.01 0 0 1 0 96z"></path>
      </svg></i></div>
  <div class="ant-result-title">There are some problems with your operation.</div>
  <div class="ant-result-subtitle"></div>
  <div class="ant-result-extra"><button type="button" class="ant-btn ant-btn-primary"><span>Go Console</span></button></div>
</div>
`;
